bug fix related with scroll bar on home section on firefox and ie

--- a/client/src/view/Home/home.sass
+++ b/client/src/view/Home/home.sass
@@ -1,5 +1,5 @@
 .home
-    overflow-x: hidden
+    overflow: hidden
     text-align: center
     margin-bottom: 50px
     .home__header
